connect to SQLDB in Azure

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MyDbConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabaseContext-2085246d-aff5-4310-a0b8-93780358cdae;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MyDbConnection": "Server=tcp:SampleGowtham.database.windows.net,1433;Database=coreDB;User ID=Gowtham;Password=Gk@8333035736;Encrypt=true;Connection Timeout=30;"
   }
 }
